--- a/main.html
+++ b/main.html
@@ -10,7 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+		 <div class="hero">
+        <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="images">
+        <div class="context">
+            <h2>Wellcome to my Pinterest clone</h2>
+            <p>Discover new inspiration and save your favorite ideas</p>
+            <button><a href="#">Explore Now</a></button>
+        </div>
+    </div>
 </body>
 
 </html>
